# des256-proj2-temp-sensor

./: .gitmodules  README.md  temp_humidity_sensor_with_LCD_git.ino
bridge/: meson.build
bridge/src/: main.cpp
bridge/src/http/: http_server.cpp  http_server.hpp  http_server_sec.cpp  http_server_sec.hpp  request.hpp  response.hpp
bridge/src/util/: env.hpp
receiver/: fridges.txt  mb.service  receiver-broken.py  receiver-serial.py
temp_over_ble/: BluefruitConfig.h  temp_over_ble.ino
